--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body{
 
 }
 
-.answerButton {
+#answerButton {
 
   background: rgb(0, 0, 0);
   padding: 10px 15px;
@@ -149,7 +149,7 @@ body{
   border: solid black 2px;
 }
 
-.answerButton:hover {
+#answerButton:hover {
 
 background: rgb(240, 201, 28);
 color: rgb(0, 0, 0);
